Webpack install / Dist UMD created by webpack

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "clear": "rimraf lib",
-    "prebuild":"./node_modules/.bin/babel --out-dir lib src",
+    "prebuild": "./node_modules/.bin/babel --out-dir lib src",
     "build": "npm run clear && npm run prebuild",
     "build:watch": "npm run clear && npm run prebuild -- --watch",
+    "build:umd": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.js",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js  --require babel-register --watch",
@@ -30,6 +31,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "eslint": "^4.19.1",
@@ -40,7 +42,8 @@
     "rimraf": "^2.6.2",
     "sinon": "^2.1.0",
     "sinon-chai": "^3.0.0",
-    "sinon-stub-promise": "^4.0.0"
+    "sinon-stub-promise": "^4.0.0",
+    "webpack": "^2.4.1"
   },
   "dependencies": {
     "chai": "^4.1.2",
