--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "npm run clear && npm run prebuild",
     "build:watch": "npm run clear && npm run prebuild -- --watch",
     "build:umd": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.js",
+    "build:umd:min": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.min.js -p",
+    "build:all": "npm run build && npm run build:umd && npm run build:umd:min",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js  --require babel-register --watch",
